--- a/styles/main.css
+++ b/styles/main.css
@@ -80,32 +80,45 @@ ul {
 
 
 #results {
-	height: 300px;
-	width: 300px;
-	background-color: #000000;
+	height: 200px;
+	width: 200px;
+	background-color:  green;
 	position: fixed;
 	right: 10px;
 	bottom: 150px;
-	color: white;
+	color: black;
 	font-size: 12px;
 	text-align: center;
 	border: 1px dashed black;
 }
 
-#resultsIcon {
+/*#resultsIcon {
 	margin-bottom: 3px;
 	margin-top: 40px;
 	font-size: 30px;
 }
-
-#duration, #length {
+*/
+#duration {
 	padding: 3px;
-	width:150px;
-	position:fixed;
+	width:200px;
+	position:center;
+	right:85px;
+	bottom:380px;
+	font-size:24px;
+	background-color: transparent;
+	text-align: center;
+}
+
+
+
+#length {
+	padding: 3px;
+	width:200px;
+	position: center;
 	right:85px;
 	bottom:225px;
 	font-size:24px;
-	
+	background-color: transparent;
 	text-align: center;
 }
 
